--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,15 @@ ol,
 menu{
     list-style: none;
 }
+img{
+    display: block;
+    max-width: 100%;
+}
 /* LAYOUT */
 body{
     display: flex;
-    flex-direction: column;
     min-height: 100vh;
+    flex-direction: column;
 }
 .section{
     flex-grow: 1;
@@ -24,6 +28,9 @@ body{
     flex-basis: 1px;
     flex-direction: column;
     background-color: #000;
+}
+.container{
+    padding: 75px 85px 15px;
 }
 .videocall{
     flex-grow: 1;
@@ -39,6 +46,9 @@ body{
 .icon-large{
     font-size: 30px;
 }
+.w-1-7{
+    flex-basis: calc((100% - 38px) / 7);
+}
 /* End LAYOUT */
 /* COMPONENTS */
 .button-action{
@@ -51,7 +61,6 @@ body{
 /* TOOLBAR */
 .toolbar{
     gap: 20px;
-    height: 85px;
     color: #fff;
     display: flex;
     flex-direction: row;
@@ -94,3 +103,43 @@ body{
     padding: 30px 20px;
     background-color: #4A4A4A;
 }
+/* End Quit */
+/* Video Call */
+.videocall{
+    position: relative;
+}
+/* Screen Tools */
+.tools{
+    position: absolute;
+    top: 10px;
+    right: 0;
+    color: #fff;
+}
+.tool{
+    padding: 5px 10px;
+    border-radius: 20px;
+    background-color: #4A4A4A;
+}
+/* End Screen Tools */
+/* Frame */
+.videocall .row{
+    row-gap: 10px;
+    column-gap: 6px;
+    align-items: center;
+}
+.user{
+    position: relative;
+}
+.user-video{
+    aspect-ratio: 16/9;
+}
+.user-info{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 5px 10px;
+    color: #fff;
+    background-color: #00000050;
+}
+/* End Frame */
+/* End Video Call */
